--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.20.2",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "moment": "^2.29.4",
+    "mongoose": "^7.4.3",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
