--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "body-parser": "^1.20.2",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-validator": "^7.0.1",
     "moment": "^2.29.4",
     "mongoose": "^7.4.3",
     "uuid": "^9.0.0"
